app-cakephp-mysql-persistent.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    description: Defines how to deploy the application server
    template.alpha.openshift.io/wait-for-ready: 'true'
  creationTimestamp: '2018-02-03T21:09:42Z'
  generation: 6
  labels:
    app: cakephp-mysql-persistent
    template: cakephp-mysql-persistent
  name: cakephp-mysql-persistent
  namespace: sc-php-mysql
  resourceVersion: '2001760263'
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/sc-php-mysql/deploymentconfigs/cakephp-mysql-persistent
  uid: 8de40640-0926-11e8-918b-0a69cdf75e6f
spec:
  replicas: 1
  selector:
    name: cakephp-mysql-persistent
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      pre:
        execNewPod:
          command:
            - ./migrate-database.sh
          containerName: cakephp-mysql-persistent
        failurePolicy: Retry
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: cakephp-mysql-persistent
      name: cakephp-mysql-persistent
    spec:
      containers:
        - env:
            - name: DATABASE_SERVICE_NAME
              value: mysql
            - name: DATABASE_ENGINE
              value: mysql
            - name: DATABASE_NAME
              value: default
            - name: DATABASE_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: cakephp-mysql-persistent
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: cakephp-mysql-persistent
            - name: CAKEPHP_SECRET_TOKEN
              valueFrom:
                secretKeyRef:
                  key: cakephp-secret-token
                  name: cakephp-mysql-persistent
            - name: CAKEPHP_SECURITY_SALT
              valueFrom:
                secretKeyRef:
                  key: cakephp-security-salt
                  name: cakephp-mysql-persistent
            - name: CAKEPHP_SECURITY_CIPHER_SEED
              valueFrom:
                secretKeyRef:
                  key: cakephp-security-cipher-seed
                  name: cakephp-mysql-persistent
            - name: OPCACHE_REVALIDATE_FREQ
              value: '2'
          image: >-
            172.30.254.23:5000/sc-php-mysql/cakephp-mysql-persistent@sha256:8e26fbf7cc7251040d4340b0ec0be06f0e822f5be2559b3e9bdc73ba00b869c9
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health.php
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: cakephp-mysql-persistent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health.php
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - cakephp-mysql-persistent
        from:
          kind: ImageStreamTag
          name: 'cakephp-mysql-persistent:latest'
          namespace: sc-php-mysql
        lastTriggeredImage: >-
          172.30.254.23:5000/sc-php-mysql/cakephp-mysql-persistent@sha256:8e26fbf7cc7251040d4340b0ec0be06f0e822f5be2559b3e9bdc73ba00b869c9
      type: ImageChange
    - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2018-02-04T00:49:59Z'
      lastUpdateTime: '2018-02-04T00:49:59Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2018-02-04T00:49:49Z'
      lastUpdateTime: '2018-02-04T00:50:00Z'
      message: >-
        replication controller "cakephp-mysql-persistent-5" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - type: Manual
    message: manual change
  latestVersion: 5
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
