service-scashu.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
    service.alpha.openshift.io/dependencies: '[{"name": "mysql", "kind": "Service"}]'
  creationTimestamp: '2018-02-03T21:09:42Z'
  labels:
    app: cakephp-mysql-persistent
    template: cakephp-mysql-persistent
  name: scashu
  namespace: sc-php-mysql
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: cakephp-mysql-persistent
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
