route-cakephp-mysql-persistent.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
    template.openshift.io/expose-uri: 'http://{.spec.host}{.spec.path}'
  creationTimestamp: '2018-02-03T21:09:42Z'
  labels:
    app: cakephp-mysql-persistent
    template: cakephp-mysql-persistent
  name: cakephp-mysql-persistent
  namespace: sc-php-mysql
  resourceVersion: '2001377055'
  selfLink: /oapi/v1/namespaces/sc-php-mysql/routes/cakephp-mysql-persistent
  uid: 8de28744-0926-11e8-bd42-0a2a2b777307
spec:
  host: >-
    cakephp-mysql-persistent-sc-php-mysql.7e14.starter-us-west-2.openshiftapps.com
  to:
    kind: Service
    name: cakephp-mysql-persistent
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2018-02-03T21:09:42Z'
          status: 'True'
          type: Admitted
      host: >-
        cakephp-mysql-persistent-sc-php-mysql.7e14.starter-us-west-2.openshiftapps.com
      routerCanonicalHostname: elb.7e14.starter-us-west-2.openshiftapps.com
      routerName: router
      wildcardPolicy: None
